[package]
name = "hello-world"
version = "0.1.0"
authors = ["hbchen <hobo@hbchen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
proxy-wasm = "0.1.0" # The Rust SDK for proxy-wasm
prometheus = "0.8"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
